--- a/catalog.html
+++ b/catalog.html
@@ -362,7 +362,7 @@
 </script>
 
 <script src="js/products.js"></script>
-<script src="js/filtesr.js"></script>
+<script src="js/filters.js"></script>
 <script type="module" src="js/index-auth.js"></script>
 </body>
 </html>
