--- a/cart.html
+++ b/cart.html
@@ -128,7 +128,7 @@
 
 <div class="container">
   <h2>Ваш кошик</h2>
-  <div id="cart-container"></div>
+  <div id="cartContainer"></div>
   <p id="totalPrice" class="total"></p>
   <button id="clearCartBtn">Очистити кошик</button>
 </div>
